--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.janekey.mdao</groupId>
     <artifactId>com-janekey-mdao</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <name>com-janekey-mdao</name>
     <description>An micro data access objects framework for Java</description>
